Closed
Bug 826479
Opened 10 years ago
Closed 10 years ago
Assertion failure: mInitialized trying to Ctrl+Middle-click paste
Categories
(Core :: Widget, defect)
Tracking
()
RESOLVED
FIXED
mozilla20
People
(Reporter: neil, Assigned: neil)
References
Details
Attachments
(1 file)
1.96 KB,
patch
|
ehsan.akhgari
:
review+
|
Details | Diff | Splinter Review |
Steps to reproduce problem: 1. If necessary, enable middlemouse.paste 2. Make a selection 3. Hold down Ctrl and middle-click a textarea
Assignee | ||
Comment 1•10 years ago
|
||
> [no attachments can be made obsolete]
(Just testing!)
Comment 2•10 years ago
|
||
Comment on attachment 697720 [details] [diff] [review] Proposed patch Review of attachment 697720 [details] [diff] [review]: ----------------------------------------------------------------- ::: editor/libeditor/text/nsPlaintextEditor.cpp @@ +1355,5 @@ > #ifdef DEBUG_clipboard > printf("Got flavor [%s]\n", flav); > #endif > + if (0 == nsCRT::strcmp(flav, kUnicodeMime) || > + 0 == nsCRT::strcmp(flav, kMozTextInternal)) Why is this hunk necessary?
Assignee | ||
Comment 3•10 years ago
|
||
(In reply to Ehsan Akhgari from comment #2) > (From update of attachment 697720 [details] [diff] [review]) > > + if (0 == nsCRT::strcmp(flav, kUnicodeMime) || > > + 0 == nsCRT::strcmp(flav, kMozTextInternal)) > Why is this hunk necessary? Rather than reinvent the wheel I copied nsPlaintextEditor::Paste (which for some reason lives in nsPlaintextDataTransfer.cpp) which uses PrepareTransferable which assumes the caller is interested in both flavours.
Updated•10 years ago
|
Attachment #697720 -
Flags: review?(ehsan) → review+
Assignee | ||
Comment 4•10 years ago
|
||
http://hg.mozilla.org/integration/mozilla-inbound/rev/ac810061a175
Comment 5•10 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/ac810061a175
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
You need to log in
before you can comment on or make changes to this bug.
Description
•