Bug 826479 Assertion failure: mInitialized when using Ctrl+Middle-click paste r=ehsan